--- a/tsconfig.json
+++ b/tsconfig.json
@@ -64,6 +64,6 @@
     "forceConsistentCasingInFileNames": true,  /* Disallow inconsistently-cased references to the same file. */
     "resolveJsonModule": true
   },
-  "include": ["routes", "app"],
+  "include": ["**/*"],
   "exclude": []
 }
